syntax = "proto3";

package pb;

option go_package = "github.com/huzaifa678/Crypto-currency-web-app-project/pb";


message DeleteWalletRequest {
  string wallet_id = 1;
}

message DeleteWalletResponse {
  string message = 1;
}

